--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -36,6 +36,11 @@
         android:layout_height="wrap_content"
         android:text="@string/cheat_button"/>
 
+    <TextView
+        android:id="@+id/cheats_remaining_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
